--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get lat lon from Google and SmartyStreets",
   "main": "latlon.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,12 @@
   },
   "homepage": "https://github.com/tivityhealth/smartystreet-google-geocode#readme",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-jest": "^26.6.1",
     "smartystreets-javascript-sdk": "^1.6.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.1"
   }
 }
