--- a/.github/workflows/dry-publish.yml
+++ b/.github/workflows/dry-publish.yml
@@ -5,17 +5,14 @@ on:
     branches:
       - main
 
-jobs:
-  build:
+jobs:    
+  release:
+    name: tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: cd npm && npm ci
-      - run: npm run test
-  release:
+    - uses: actions/checkout@v1
+    - name: Run Jest
+      uses: stefanoeb/jest-action@1.0.3
     name: publish
     runs-on: ubuntu-latest
     steps:
