--- a/.github/workflows/dry-publish.yml
+++ b/.github/workflows/dry-publish.yml
@@ -5,14 +5,14 @@ on:
     branches:
       - main
 
-jobs:    
-  release:
-    name: tests
+jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Run Jest
+      - uses: actions/checkout@v1
+      - name: Run Jest
       uses: stefanoeb/jest-action@1.0.3
+  release:
     name: publish
     runs-on: ubuntu-latest
     steps:
