--- a/.github/workflows/dry-publish.yml
+++ b/.github/workflows/dry-publish.yml
@@ -14,8 +14,7 @@ jobs:
         with:
           node-version: 12
       - run: cd npm && npm ci
-      - run: npm i jest
-      - run: jest
+      - run: npm test
   release:
     name: publish
     runs-on: ubuntu-latest
