--- a/.github/workflows/dry-publish.yml
+++ b/.github/workflows/dry-publish.yml
@@ -6,19 +6,10 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: cd npm && npm ci
-      - run: npm init -y
-      - run: npm test
   release:
-    name: publish
+    name: test and publish
     runs-on: ubuntu-latest
+
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -27,6 +18,10 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org
+      - name: Install
+        run: cd npm && npm ci
+      - name: tests
+        run: cd npm && npx jest
       - name: publish
         run: cd npm && npm publish --dry-run
         env:
