--- a/.github/workflows/dry-publish.yml
+++ b/.github/workflows/dry-publish.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install
         run: cd npm && npm ci
       - name: tests
-        run: cd npm && npx jest
+        run: cd npm && npm test
       - name: publish
         run: cd npm && npm publish --dry-run
         env:
