--- a/.github/workflows/releasenpm.yml
+++ b/.github/workflows/releasenpm.yml
@@ -21,6 +21,9 @@ jobs:
         run: cd npm && npm ci
       - name: tests
         run: cd npm && npx jest
+        env:
+          CI: true
+          WEB_KEY: ${{ secrets.WEB_KEY }}
       - name: update version
         run: cd npm && npm version ${{ github.event.release.tag_name }}
       - name: publish
