--- a/npm/package.json
+++ b/npm/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@googlemaps/google-maps-services-js": "^3.1.13",
     "babel-jest": "^26.6.1",
     "babel-loader": "^8.2.2",
     "smartystreets-javascript-sdk": "^1.6.0",
