--- a/npm/package.json
+++ b/npm/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@googlemaps/google-maps-services-js": "^3.1.13",
+    "axios": "^0.21.1",
     "babel-jest": "^26.6.1",
     "babel-loader": "^8.2.2",
     "smartystreets-javascript-sdk": "^1.6.0",
