--- a/npm/package.json
+++ b/npm/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.21.1",
     "babel-jest": "^26.6.1",
     "babel-loader": "^8.2.2",
+    "node-notifier": "^9.0.0",
     "smartystreets-javascript-sdk": "^1.6.0",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0"
