--- a/nuget/SmartyStreetsGoogleGeocode/SmartyStreetsGoogleGeocode/SmartyStreetsGoogleGeocode.csproj
+++ b/nuget/SmartyStreetsGoogleGeocode/SmartyStreetsGoogleGeocode/SmartyStreetsGoogleGeocode.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,7 +6,6 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\Users\chilkav\source\repos\SmartyStreetsGoogleGeocodeNuget\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
