--- a/.github/workflows/releaseNuGet.yml
+++ b/.github/workflows/releaseNuGet.yml
@@ -27,7 +27,7 @@ jobs:
 
   release:
     name: test and publish
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
