--- a/.github/workflows/releaseNuGet.yml
+++ b/.github/workflows/releaseNuGet.yml
@@ -46,10 +46,10 @@ jobs:
           echo "SmartyStreets_AuthToken=${{secrets.SMARTYSTREETS_AUTHTOKEN}}" >> $GITHUB_ENV
           echo "Google_Api_Key=${{secrets.GOOGLE_API_KEY}}" >> $GITHUB_ENV
           dotnet test
-        env:
-          SMARTYSTREETS_AUTHID: ${{secrets.SMARTYSTREETS_AUTHID}}
-          SMARTYSTREETS_AUTHTOKEN: ${{secrets.SMARTYSTREETS_AUTHTOKEN}}
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        #env:
+        #  SMARTYSTREETS_AUTHID: ${{secrets.SMARTYSTREETS_AUTHID}}
+        #  SMARTYSTREETS_AUTHTOKEN: ${{secrets.SMARTYSTREETS_AUTHTOKEN}}
+        #  GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       #- name: Create NuGet package
       #  run: |
       #    cd nuget/SmartyStreetsGoogleGeocode
