--- a/.github/workflows/releasenpm.yml
+++ b/.github/workflows/releasenpm.yml
@@ -24,6 +24,8 @@ jobs:
         run: cd npm && npm ci
       - name: tests
         run: cd npm && npx jest
+      - name: Build buyndle
+        run: cd npm && npm run build
         env:
           CI: true
           WEB_KEY: ${{ secrets.WEB_KEY }}
