--- a/.github/workflows/releasenpm.yml
+++ b/.github/workflows/releasenpm.yml
@@ -22,12 +22,12 @@ jobs:
           registry-url: https://registry.npmjs.org
       - name: Install
         run: cd npm && npm ci
-      #- name: tests
-      #  run: cd npm && npx jest
-      #  env:
-      #    CI: true
-      #    WEB_KEY: ${{ secrets.WEB_KEY }}
-      #    GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+      - name: tests
+        run: cd npm && npx jest
+        env:
+          CI: true
+          WEB_KEY: ${{ secrets.WEB_KEY }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       - name: Build bundle
         run: cd npm && npm run build
       - name: update version
