--- a/npm/package.json
+++ b/npm/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sggeocode",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Get lat lon from Google and SmartyStreets",
-  "main": "sgGeocode.js",
+  "main": "src/sgGeocode.js",
   "files": [
     "src",
     "build"
