--- a/npm/package.json
+++ b/npm/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/tivityhealth/smartystreet-google-geocode#readme",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.1.13",
-    "smartystreets-javascript-sdk": "^1.6.0",
+    "smartystreets-javascript-sdk": "^1.6.0"
   },
   "devDependencies": {
     "jest": "^26.6.1",    
