--- a/npm/package.json
+++ b/npm/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "jest": "^26.6.1",    
+    "axios": "^0.21.1",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",    
     "babel-jest": "^26.6.1",
