--- a/.github/workflows/releaseNuGet.yml
+++ b/.github/workflows/releaseNuGet.yml
@@ -1,30 +1,10 @@
 name: "🚀 publish nuget"
 
 on:
-  push:
-    branches:
-      - other
+  release:
+    types: [published]
 
 jobs:
-  #build:
-  #  name: build and copy npm
-  #  runs-on: ubuntu-latest
-  #
-  #  steps:
-  #    - name: checkout
-  #      uses: actions/checkout@v2
-  #    - name: node
-  #      uses: actions/setup-node@v1
-  #      with:
-  #        node-version: 12
-  #        registry-url: https://registry.npmjs.org
-  #    - name: Install
-  #      run: cd npm && npm ci
-  #    - name: build js bundle
-  #      run: cd npm && npm run build
-  #    - name: copy js bundle
-  #      run: cd npm/build/ && cp sgGeocode_bundle.js ../../nuget/SmartyStreetsGoogleGeocode
-
   release:
     name: test and publish
     runs-on: windows-latest
