--- a/.github/workflows/releasenpm.yml
+++ b/.github/workflows/releasenpm.yml
@@ -1,11 +1,8 @@
 name: "🚀 publish npm"
 
 on:
-  #release:
-  #  types: [published]
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
 
 jobs:
   release:
