--- a/nuget/SmartyStreetsGoogleGeocode/SmartyStreetsGoogleGeocode/SmartyStreetsGoogleGeocode.csproj
+++ b/nuget/SmartyStreetsGoogleGeocode/SmartyStreetsGoogleGeocode/SmartyStreetsGoogleGeocode.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="smartystreets-dotnet-sdk" Version="8.6.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
