--- a/nuget/FrameworkGeocoderExample/FrameworkGeocoderExample/App.config
+++ b/nuget/FrameworkGeocoderExample/FrameworkGeocoderExample/App.config
@@ -3,6 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <appSettings>  
+      <add key="SmartyStreets_AuthId" value="your auth id"/>
+      <add key="SmartyStreets_AuthToken" value="your auth token"/>
+      <add key="Google_Api_Key" value="your google api key"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
