dotnet configuration release

--- a/.github/workflows/releaseNuGet.yml
+++ b/.github/workflows/releaseNuGet.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build solution
         run: |
           cd nuget/SmartyStreetsGoogleGeocode
-          dotnet build
+          dotnet build --configuration release
       - name: Test
         run: |
           cd nuget/SmartyStreetsGoogleGeocode
