Removed cnosole log from zipApi.js

--- a/.github/workflows/releaseNuGet.yml
+++ b/.github/workflows/releaseNuGet.yml
@@ -1,8 +1,9 @@
 name: "🚀 publish nuget"
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
 
 jobs:
   release:
@@ -14,7 +15,11 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.x'
+          dotnet-version: "3.1.x"
+      - name: Clean Solution
+        run: |
+          cd nuget/SmartyStreetsGoogleGeocode
+          dotnet clean
       - name: Build solution
         run: |
           cd nuget/SmartyStreetsGoogleGeocode
@@ -30,11 +35,11 @@ jobs:
           SMARTYSTREETS_AUTHID: ${{secrets.SMARTYSTREETS_AUTHID}}
           SMARTYSTREETS_AUTHTOKEN: ${{secrets.SMARTYSTREETS_AUTHTOKEN}}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-      - name: Create NuGet package
-        run: |
-          cd nuget/SmartyStreetsGoogleGeocode
-          dotnet pack -c Release /p:Version=${{ github.event.release.tag_name }}
-      - name: Push with dotnet
-        run: |
-          cd nuget/SmartyStreetsGoogleGeocode
-          dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      #- name: Create NuGet package
+      #  run: |
+      #    cd nuget/SmartyStreetsGoogleGeocode
+      #    dotnet pack -c Release /p:Version=${{ github.event.release.tag_name }}
+      #- name: Push with dotnet
+      #  run: |
+      #    cd nuget/SmartyStreetsGoogleGeocode
+      #    dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
